--- a/index.html
+++ b/index.html
@@ -255,6 +255,36 @@
                     </tbody>
                 </table>
             </div>
+            <div class="positions-kline-panel">
+                <div class="positions-kline-header">
+                    <h3 class="positions-kline-title">当前持仓 K 线</h3>
+                    <div class="positions-kline-controls">
+                        <label class="kline-label">
+                            合约
+                            <select id="kline-symbol-select" class="kline-select">
+                                <option value="">加载中...</option>
+                            </select>
+                        </label>
+                        <label class="kline-label">
+                            周期
+                            <select id="kline-interval-select" class="kline-select">
+                                <option value="1m">1分钟</option>
+                                <option value="3m">3分钟</option>
+                                <option value="5m" selected>5分钟</option>
+                                <option value="10m">10分钟</option>
+                                <option value="15m">15分钟</option>
+                                <option value="30m">30分钟</option>
+                                <option value="1h">1小时</option>
+                                <option value="4h">4小时</option>
+                                <option value="1d">1天</option>
+                            </select>
+                        </label>
+                    </div>
+                </div>
+                <div class="positions-kline-chart-container">
+                    <canvas id="positionKlineChart"></canvas>
+                </div>
+            </div>
         </section>
 
         <!-- Trades Section -->
@@ -309,6 +339,7 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@11.1.1/marked.min.js"></script>
+  <script src="https://unpkg.com/lightweight-charts@4.1.3/dist/lightweight-charts.standalone.production.js"></script>
   <script src="monitor-script.js"></script>
 </body>
 
