修复K线图容器：canvas改为div

--- a/index.html
+++ b/index.html
@@ -281,9 +281,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="positions-kline-chart-container">
-                    <canvas id="positionKlineChart"></canvas>
-                </div>
+                <div class="positions-kline-chart-container" id="positionKlineChart"></div>
             </div>
         </section>
 
